tests/scan/fixtures/validation/negative/clean_go_clean-log-writer/clean-log-writer.go
// Package clean-log-writer is a clean Go module.
package clean-log-writer

func Hello() string { return "hello" }
